files/gatekeeper-templates/betting-geofencing_regulated_markets-constrainttemplate.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: betting-geofencing_regulated_markets
  annotations:
    rulehub.id: betting.geofencing_regulated_markets
    rulehub.title: <Policy Title>
    rulehub.links: |
      - <https://reference-1>
      - <https://reference-2>
spec:
  crd:
    spec:
      names:
        kind: <Kind>
      validation:
        openAPIV3Schema:
          type: object
          properties:
            # add schema for parameters
            requiredLabel:
              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package rulehub.betting.geofencing_regulated_markets
        import future.keywords.if

        default deny = []

        # Example: deny with a message
        deny[msg] {
          input.review.kind.kind == "Deployment"
          msg := "igaming.geofencing_regulated_markets: example violation"
        }
